<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_copilot_applications</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cmw4187@126.com">lawskiy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_ros_driver2</depend>
  <depend>mavros_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>px4_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>periphery</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
